--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
+  "homepage": "https://isak4567.github.io/ExeRVPortafolio",
   "name": "above",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://isak4567.github.io/ExeRVPortafolio/bulid",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
